--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,1 +1,9 @@
-<h1>mein blog</h1>
+---
+import Layout from '../layouts/Layout.astro';
+---
+
+<Layout title="Willkommen auf meine Internetseite.">
+    <main>
+        <h1 class="text-6xl">mein blog</h1>
+    </main>
+</Layout>
